--- a/app/src/main/res/layout/item_owner.xml
+++ b/app/src/main/res/layout/item_owner.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <com.lihang.ShadowLayout
+        android:id="@+id/mShadowLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         app:hl_cornerRadius="3dp"
         app:hl_shadowBackColor="#fff"
         app:hl_shadowColor="#2A696969"
-        app:hl_shadowLimit="4dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        app:hl_shadowLimit="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -221,4 +222,11 @@
             </LinearLayout>
         </LinearLayout>
     </com.lihang.ShadowLayout>
+
+
+    <com.car.notver.weight.NoDataView
+        android:id="@+id/mNoDataView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp" />
 </LinearLayout>
