--- a/app/src/main/res/layout/activity_depository.xml
+++ b/app/src/main/res/layout/activity_depository.xml
@@ -19,11 +19,11 @@
         android:layout_marginBottom="8dp"
         android:background="#F9F9F9"
         android:cursorVisible="true"
-        android:textCursorDrawable="@null"
         android:drawableLeft="@mipmap/icon_search"
         android:drawablePadding="10dp"
         android:hint="请输入车牌号码"
         android:paddingLeft="10dp"
+        android:textCursorDrawable="@null"
         android:textSize="@dimen/ctv_sizen_13"
         android:visibility="visible" />
 
@@ -51,10 +51,14 @@
     </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
 
 
-    <com.car.notver.weight.NoDataView
-        android:id="@+id/mNoDataView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+
+    </LinearLayout>
 
 
 </RelativeLayout>
