--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_marginTop="50dp"
         app:swipe_style="classic">
 
@@ -185,6 +187,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
+                    android:background="@color/colorWhite"
                     android:orientation="horizontal">
 
                     <TextView
@@ -341,6 +344,7 @@
                     android:id="@+id/mRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
                     android:layout_marginTop="8dp" />
             </LinearLayout>
 
