--- a/app/src/main/res/layout/top_custormer.xml
+++ b/app/src/main/res/layout/top_custormer.xml
@@ -7,6 +7,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@color/Text_3377E1">
 
         <RelativeLayout
