--- a/app/src/main/res/layout/item_depository.xml
+++ b/app/src/main/res/layout/item_depository.xml
@@ -15,11 +15,11 @@
         android:layout_marginLeft="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="90dp"
+            android:layout_height="75dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -27,8 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="10dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -49,7 +48,7 @@
                     android:gravity="center"
                     android:text="306"
                     android:textColor="#878787"
-                    android:textSize="@dimen/ctv_sizen_12" />
+                    android:textSize="@dimen/ctv_sizen_13" />
 
             </LinearLayout>
 
@@ -58,27 +57,27 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginRight="10dp"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/text_license"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:gravity="center|right"
                     android:text="可用CC"
                     android:textColor="#878787"
-                    android:textSize="@dimen/ctv_sizen_12" />
+                    android:textSize="@dimen/ctv_sizen_13" />
 
                 <TextView
                     android:id="@+id/text_make"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:gravity="center"
+                    android:gravity="center|right"
                     android:text="306"
                     android:textColor="#878787"
-                    android:textSize="@dimen/ctv_sizen_12" />
+                    android:textSize="@dimen/ctv_sizen_13" />
 
             </LinearLayout>
         </RelativeLayout>
