--- a/app/src/main/res/layout/item_depository1.xml
+++ b/app/src/main/res/layout/item_depository1.xml
@@ -21,14 +21,14 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center"
-            android:layout_marginRight="12dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/text_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_alignParentLeft="true"
                 android:text="可用CC"
@@ -39,7 +39,7 @@
             <TextView
                 android:id="@+id/text_phone"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:gravity="center"
                 android:text="306"
