--- a/app/src/main/res/layout/item_depository.xml
+++ b/app/src/main/res/layout/item_depository.xml
@@ -1,86 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
     <com.lihang.ShadowLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="5dp"
         app:hl_cornerRadius="3dp"
         app:hl_shadowBackColor="#fff"
         app:hl_shadowColor="#2A696969"
-        app:hl_shadowLimit="4dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp">
+        app:hl_shadowLimit="4dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="10dp"
-                android:orientation="vertical">
+            <TextView
+                android:id="@+id/text_store"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:gravity="center"
+                android:text="可用CC"
+                android:textColor="@color/black33"
+                android:textSize="@dimen/ctv_sizen_14"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/text_name"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/dive_line" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="5dp">
+
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="可用CC"
-                    android:textColor="@color/black33"
-                    android:textSize="@dimen/ctv_sizen_14"
-                    android:textStyle="bold" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/text_phone"
+                    <TextView
+                        android:id="@+id/text_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="可用CC"
+                        android:textColor="@color/black33"
+                        android:textSize="@dimen/ctv_sizen_14"
+                        android:textStyle="bold" />
+
+
+                    <TextView
+                        android:id="@+id/text_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/text_name"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="306"
+                        android:textColor="#878787"
+                        android:textSize="@dimen/ctv_sizen_13" />
+                </RelativeLayout>
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:text="306"
-                    android:textColor="#878787"
-                    android:textSize="@dimen/ctv_sizen_13" />
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="6dp"
+                    android:orientation="vertical">
 
-            </LinearLayout>
+                    <TextView
+                        android:id="@+id/text_license"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center|right"
+                        android:text="可用CC"
+                        android:textColor="#878787"
+                        android:textSize="@dimen/ctv_sizen_13" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="10dp"
-                android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/text_make"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/text_license"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center|right"
+                        android:text="306"
+                        android:textColor="#878787"
+                        android:textSize="@dimen/ctv_sizen_13" />
 
-                <TextView
-                    android:id="@+id/text_license"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center|right"
-                    android:text="可用CC"
-                    android:textColor="#878787"
-                    android:textSize="@dimen/ctv_sizen_13" />
+                </RelativeLayout>
+            </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/text_make"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center|right"
-                    android:text="306"
-                    android:textColor="#878787"
-                    android:textSize="@dimen/ctv_sizen_13" />
-
-            </LinearLayout>
-        </RelativeLayout>
+        </LinearLayout>
     </com.lihang.ShadowLayout>
 
 </LinearLayout>
