--- a/app/src/main/res/layout/item_depository1.xml
+++ b/app/src/main/res/layout/item_depository1.xml
@@ -25,15 +25,23 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/text_store"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:gravity="center"
-                android:text="可用CC"
-                android:textColor="@color/black33"
-                android:textSize="@dimen/ctv_sizen_14"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/text_store"
+                    android:layout_width="match_parent"
+                    android:layout_height="35dp"
+                    android:drawableRight="@mipmap/ic_delete"
+                    android:gravity="center"
+                    android:text="可用CC"
+                    android:textColor="@color/black33"
+                    android:textSize="@dimen/ctv_sizen_14"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
 
             <View
