--- a/app/src/main/res/layout/item_depository.xml
+++ b/app/src/main/res/layout/item_depository.xml
@@ -27,7 +27,9 @@
                 android:id="@+id/text_store"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
+                android:drawableRight="@mipmap/ic_delete"
                 android:text="可用CC"
                 android:textColor="@color/black33"
                 android:textSize="@dimen/ctv_sizen_14"
