--- a/app/src/main/res/layout/item_depository1.xml
+++ b/app/src/main/res/layout/item_depository1.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -33,14 +33,25 @@
                     android:id="@+id/text_store"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:drawableRight="@mipmap/ic_delete"
                     android:gravity="center"
                     android:text="可用CC"
                     android:textColor="@color/black33"
                     android:textSize="@dimen/ctv_sizen_14"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/iv_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:src="@mipmap/ic_delete" />
+
+            </RelativeLayout>
 
 
 
