--- a/app/src/main/res/layout/activity_depository.xml
+++ b/app/src/main/res/layout/activity_depository.xml
@@ -24,6 +24,7 @@
             android:background="#F9F9F9"
             android:cursorVisible="true"
             android:layout_marginRight="50dp"
+            android:paddingRight="10dp"
             android:drawableLeft="@mipmap/icon_search"
             android:drawablePadding="10dp"
             android:hint="请输入车牌号码"
