--- a/app/src/main/res/layout/activity_depository1.xml
+++ b/app/src/main/res/layout/activity_depository1.xml
@@ -8,12 +8,50 @@
 
     <include layout="@layout/activity_title" />
 
+    <RelativeLayout
+        android:id="@+id/rl_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="8dp">
+
+        <com.car.notver.weight.ClearEditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginRight="50dp"
+            android:background="#F9F9F9"
+            android:cursorVisible="true"
+            android:drawableLeft="@mipmap/icon_search"
+            android:drawablePadding="10dp"
+            android:hint="请输入车牌号码"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textCursorDrawable="@null"
+            android:textSize="@dimen/ctv_sizen_13"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/text_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="搜索"
+            android:textColor="@color/colorAccent"
+            android:textSize="@dimen/ctv_sizen_14" />
+
+    </RelativeLayout>
 
     <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
         android:id="@+id/swipeToLoadLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
+        android:layout_below="@+id/rl_tab"
         android:layout_gravity="center"
         app:swipe_style="classic">
 
