--- a/app/src/main/res/layout/item_depository.xml
+++ b/app/src/main/res/layout/item_depository.xml
@@ -32,7 +32,8 @@
                     android:id="@+id/text_store"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:gravity="center"
+                    android:layout_marginLeft="10dp"
+                    android:gravity="center|left"
                     android:text="可用CC"
                     android:textColor="@color/black33"
                     android:textSize="@dimen/ctv_sizen_14"
@@ -44,8 +45,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
-                    android:paddingRight="10dp"
                     android:paddingTop="10dp"
+                    android:paddingRight="10dp"
                     android:paddingBottom="10dp"
                     android:src="@mipmap/ic_delete" />
 
@@ -78,9 +79,8 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="可用CC"
-                        android:textColor="@color/black33"
-                        android:textSize="@dimen/ctv_sizen_14"
-                        android:textStyle="bold" />
+                        android:textColor="#878787"
+                        android:textSize="@dimen/ctv_sizen_14" />
 
 
                     <TextView
