--- a/app/src/main/res/layout/item_depository1.xml
+++ b/app/src/main/res/layout/item_depository1.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/text_store"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:gravity="center"
+                    android:gravity="center|left"
                     android:text="可用CC"
                     android:textColor="@color/black33"
                     android:textSize="@dimen/ctv_sizen_14"
@@ -73,9 +73,9 @@
                     android:layout_alignParentLeft="true"
                     android:gravity="center"
                     android:text="可用CC"
-                    android:textColor="@color/black33"
+                    android:textColor="#878787"
                     android:textSize="@dimen/ctv_sizen_14"
-                    android:textStyle="bold" />
+                  />
 
                 <TextView
                     android:id="@+id/text_phone"
