--- a/app/src/main/res/layout/item_owner.xml
+++ b/app/src/main/res/layout/item_owner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -224,9 +224,22 @@
     </com.lihang.ShadowLayout>
 
 
-    <com.car.notver.weight.NoDataView
-        android:id="@+id/mNoDataView"
+    <LinearLayout
+        android:id="@+id/ll_noView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp" />
-</LinearLayout>
+        android:layout_marginTop="90dp"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+
+        <com.car.notver.weight.NoView
+            android:id="@+id/mNoDataView"
+            android:layout_width="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
+
+</RelativeLayout>
