--- a/app/src/main/res/layout/item_depository.xml
+++ b/app/src/main/res/layout/item_depository.xml
@@ -31,8 +31,10 @@
                 <TextView
                     android:id="@+id/text_store"
                     android:layout_width="match_parent"
-                    android:layout_height="35dp"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
                     android:layout_marginLeft="10dp"
+                    android:paddingBottom="10dp"
                     android:gravity="center|left"
                     android:text="可用CC"
                     android:textColor="@color/black33"
