--- a/app/src/main/res/layout/item_right.xml
+++ b/app/src/main/res/layout/item_right.xml
@@ -27,8 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="20dp">
+                android:layout_centerInParent="true">
 
                 <TextView
                     android:id="@+id/text_name"
@@ -56,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_marginLeft="30dp"
+                android:layout_marginLeft="20dp"
                 android:layout_toRightOf="@+id/rl_tab">
 
                 <TextView
