--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="blue03">#036eb7</color>
     <color name="blackef">#EFEFEF</color>
     <color name="black7e">#7E7E7E</color>
+    <color name="black87">#878787</color>
     <color name="black55">#444444</color>
     <color name="black31">#313437</color>
     <color name="black66">#666666</color>
