--- a/app/src/main/res/layout/item_right.xml
+++ b/app/src/main/res/layout/item_right.xml
@@ -8,8 +8,8 @@
     <com.lihang.ShadowLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         app:hl_cornerRadius="3dp"
         app:hl_shadowBackColor="#fff"
@@ -76,7 +76,7 @@
                     android:layout_marginTop="6dp"
                     android:gravity="center|left"
                     android:text="22元"
-                    android:textColor="#0A0A0A"
+                    android:textColor="@color/colorAccent"
                     android:textSize="@dimen/ctv_sizen_13" />
 
             </RelativeLayout>
@@ -96,4 +96,11 @@
         </RelativeLayout>
 
     </com.lihang.ShadowLayout>
+
+
+    <TextView
+        android:id="@+id/text_empty"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:visibility="gone" />
 </LinearLayout>
