--- a/app/src/main/res/layout/activity_projec.xml
+++ b/app/src/main/res/layout/activity_projec.xml
@@ -37,7 +37,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/text_search"
+            android:id="@+id/text_count"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
