添加客户信息

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,7 +40,9 @@
                 android:id="@+id/text_edition"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:drawablePadding="5dp"
                 android:layout_alignParentRight="true"
+                android:drawableRight="@mipmap/ic_right"
                 android:gravity="center"
                 android:paddingRight="20dp"
                 android:text="检测新版本"
