--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -40,9 +40,9 @@
                 android:id="@+id/text_edition"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:drawablePadding="5dp"
                 android:layout_alignParentRight="true"
                 android:drawableRight="@mipmap/ic_right"
+                android:drawablePadding="5dp"
                 android:gravity="center"
                 android:paddingRight="20dp"
                 android:text="检测新版本"
@@ -61,6 +61,7 @@
             android:id="@+id/rl_tab"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:visibility="gone"
             android:background="@color/colorWhite">
 
             <TextView
@@ -69,6 +70,38 @@
                 android:gravity="center"
                 android:paddingLeft="15dp"
                 android:text="用户协议"
+                android:textColor="#232323"
+                android:textSize="@dimen/ctv_sizen_15" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:drawableRight="@mipmap/ic_right"
+                android:gravity="center"
+                android:paddingRight="20dp"
+                android:textColor="#19304E"
+                android:textSize="@dimen/ctv_sizen_14" />
+
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/dive_line" />
+
+        <RelativeLayout
+            android:id="@+id/rl_tab1"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="@color/colorWhite">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="15dp"
+                android:text="用户隐私"
                 android:textColor="#232323"
                 android:textSize="@dimen/ctv_sizen_15" />
 
