添加客户信息

--- a/app/src/main/res/layout/activity_privacy.xml
+++ b/app/src/main/res/layout/activity_privacy.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/activity_title" />
 
+    <include layout="@layout/activity_title" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -13,37 +13,49 @@
         android:fadingEdge="none"
         android:scrollbars="none">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/text_search"
+                android:id="@+id/text_doc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center|left"
-                android:lineSpacingExtra="1.5dp"
-                android:padding="10dp"
-                android:text="          本软件尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，本软件会按照本隐私权政策的规定使用和披露您的个人信息。但本软件将以高度的勤勉、审慎义务对待这些信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，本软件不会将这些信息对外披露或向第三方提供。本软件会不时更新本隐私权政策。您在同意本软件服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于本软件服务使用协议不可分割的一部分。
-\n1.适用范围
-\n在您使用本软件网络服务，本软件自动接收并记录的您的手机上的信息，包括但不限于您的健康数据、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；
-\n2.信息的使用
-\n在获得您的数据之后，本软件会将其上传至服务器，以生成您的排行榜数据，以便您能够更好地使用服务。
-\n3.信息披露
-\n本软件不会将您的信息披露给不受信任的第三方。
-\n根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；
-\n如您出现违反中国有关法律、法规或者相关规则的情况，需要向第三方披露；
-\n4.信息存储和交换
-\n本软件收集的有关您的信息和资料将保存在本软件及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或本软件收集信息和资料所在地的境外并在境外被访问、存储和展示。
-\n5.信息安全
-\n在使用本软件网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，请您立即联络本软件客服，以便本软件采取相应措施。"
+                android:lineSpacingMultiplier="1.2"
+                android:lineSpacingExtra="2dp"
+                android:padding="12dp"
+                android:text="尊敬的用户：
+\n惠保养 应用是由 今卡贝区块链（深圳）有限公司（以下简称“今卡贝公司”）为您提供的一款智能汽车维修产品。今卡贝公司十分尊重您的个人信息和数据，并会尽全力保护您的个人信息和数据的安全可靠。本政策仅适用于 今卡贝 应用收集和存储的用户信息和数据。
+请在使用 惠保养 应用前，务必仔细阅读并了解和同意《惠保养 应用的隐私政策》。该政策规定了您在使用 惠保养 应用时我们将如何收集、使用、披露、处理和保护您提供给我们的信息。如果我们需要您提供某些信息用于在使用该产品时验证您的身份、以及向我们的第三    方服务供应商连接服务时，我们会严格遵守该隐私政策来使用这些信息。如果您已经开始使用惠保养应用，就表示您已经阅读、许可并接受该隐私政策中所描述的所有条款，以及我们今后随时做出的任何变更。
+\n另外，您需要承诺在您开始使用本产品时已经是成年人、如果您是未成年人，需要您的监护    人同意您使用本产品并同意相关的服务条款和隐私政策。
+\n1惠保养应用怎样收集并使用您的信息
+个人信息是指以电子或者其他方式记录的能够单独或者与其他信息结合识别特定自然人身份或者反映特定自然人活动情况的各种信息，其中属于个人敏感信息的包括个人身份证件号  码、手机号码、行踪轨迹（例如居住和办公地址）等。
+我们只会以该声明中所列出的目的，来收集和使用您的信息：
+\n1-1.身份证件号码（仅针对支持该功能的机型）
+\n身份证件号码用于用户开门店时的资料审核（需要开启相机权限）。
+\n您可通过进入“设置”>惠保养 应用>“惠保养>应用能力设置”>“相机权限”，来关闭相机权限。
+\n应用>“惠保养>应用能力设置”>“相机权限”，来关闭相机权限。
+\n1-2.定位功能
+\n该功能是將您所在的门店定位地址以便于用于用户维修时候选择门店地址
+\n1-3.拨打电话
+\n惠保养应用为了能够实现拨打电话以及发送信息的功能
+\n1-4.优先顺序
+\n本隐私政策针对惠保养应用的应用软件以及其提供的相关服务 如果本隐私政策与今卡贝
+贝公司隐私政策之间存在不一致，以本隐私政策力准；若本隐私政策末包含（约定）的相关内容，则以 今卡贝 公司隐私政策中包含（约定）的为准。
+\n1-5.联系我们
+\n如果您对本隐私政策有任何疑问、意见或建议，或者对我们收失 使用或披露您的个人信息有 任 何 问 题 请打 我 们 的 客 服 电 话 18603055198或 登 录 今卡贝 公 司 官 网www.jkabe.com通过在线客服的方式与我们联系。
+\n1-6.更新说明
+\n今卡贝 公司保留随时更新本声明的权利，当声明发生修改时，我们会通过连窗或通知的方式
+告知您变更后的声明。如您继续使用我们的服务， 即视为您同意我们的变更后的隙私政策我们才会按照更新的声明收集、使用、存储您的个人信息。
+\n本声明自更新之日起生效
+\n最近的更新日期：2020 年 06 月 22
+"
                 android:textColor="@color/black33"
                 android:textSize="@dimen/ctv_sizen_14" />
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
-
-
 </LinearLayout>
