添加客户信息

--- a/app/src/main/res/layout/activity_depository1.xml
+++ b/app/src/main/res/layout/activity_depository1.xml
@@ -26,6 +26,8 @@
             android:cursorVisible="true"
             android:drawableLeft="@mipmap/icon_search"
             android:drawablePadding="10dp"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
             android:hint="请输入车牌号码"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
