添加客户信息

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -34,6 +34,7 @@
     <com.car.notver.weight.NoDataView
         android:id="@+id/mNoDataView"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="match_parent"/>
 
 </RelativeLayout>
