--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -55,9 +55,9 @@
         android:background="@color/colorWhite"
         android:visibility="gone">
 
-        <TextView
+        <EditText
             android:id="@+id/text_address"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="80dp"
             android:background="@color/colorWhite"
