--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -240,6 +240,7 @@
                     android:background="@color/dive_line" />
 
                 <RelativeLayout
+                    android:id="@+id/rl_tabs"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:background="@color/colorWhite"
@@ -260,7 +261,7 @@
                         android:textSize="@dimen/ctv_sizen_14"
                         android:textStyle="bold" />
 
-                    <EditText
+                    <TextView
                         android:id="@+id/et_address"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
